# caep

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
caep/: __init__.py  config.py  example.py  schema.py
tests/: test_config.py  test_helpers.py  test_schema.py
tests/data/: config_testdata.ini  config_testdata2.ini
