[project]
name = "caep"
version = "1.5.3"
description = "Config Argument Env Parser (CAEP)"
authors = [{ name = "mnemonic", email = "opensource@mnemonic.no" }]
requires-python = ">=3.9"
readme = "README.md"
license = "ISC"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "License :: OSI Approved :: ISC License (ISCL)",
]
dependencies = [
    "pydantic>=1.10.0,<3",
]

[project.urls]
Homepage = "https://github.com/mnemonic-no/caep"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "pre-commit>=4.0.0,<5",
    "pre-commit-hooks>=4.6.0,<5",
    "ruff>=0.9,<1",
    "mypy>=1.16.0,<2",
    "coverage>=7.9.1,<8",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "A",   # Builtins
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "PTH", # Pathlib
    "I",   # isort
    "C",   # mccabe rules
    "RUF", # Ruff
]

ignore = [
    "RUF015", # Prefer `next(...)` over single element slice
]

[tool.hatch.build.targets.wheel]
include = ["caep"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = [
    "tests/*",
]
